Fixed isse of Horizontal overflow on appear of scroll

--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,25 @@
 body,
 html,
 #root {
-  max-width: 1280px;
   margin: 0;
   padding: 0;
+  height: 100%;
+  width: 100%;
+}
+
+.background-video {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+  z-index: -1;
 }
 
 .main {
-  min-width: 100vw;
-  min-height: 100vh;
+  min-width: 100%;
+  min-height: 100%;
   padding: 5px;
   color: white;
   background-color: rgba(0, 0, 0, 0.2); /* Slightly darker */
@@ -48,17 +59,6 @@ html,
   background-position: right center; /* change the direction of the change here */
   color: #fff;
   text-decoration: none;
-}
-
-.background-video {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  object-fit: cover;
-  z-index: -1;
-  pointer-events: none;
 }
 
 .overlay {
